# humanSQL

./: .env  .gitignore  README.md  main.py  pyproject.toml
AdventureWorks-oltp-install-script/: install.sql
modules/: llm.py
